# Financial-News-AI-Analyzer

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  PROJECT_REPORT.md  README.md  pyproject.toml  requirements-api.txt  requirements.txt  run_backend.ps1  setup_env.ps1  vercel.json
.streamlit/: config.toml
api/: index.py
config/: __init__.py  constants.py  settings.py
dashboard/: __init__.py  app.py
dashboard/components/: __init__.py  alert_history.py  impact_view.py  kpi_cards.py  market_panel.py  news_feed.py  sentiment_chart.py  watchlist_manager.py
dashboard/styles/: main.css
dashboard/styles/themes/: dark.css  light.css
dashboard/utils/: __init__.py  data_fetch.py  theme_manager.py
docs/: api_setup.md  deployment.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: api.test.ts  kpi-cards.test.tsx  layout.test.tsx
frontend/src/components/dashboard/: alert-history.tsx  backtester.tsx  chatbot.tsx  confidence-distribution.tsx  correlation-heatmap.tsx  date-range-filter.tsx  health-dashboard.tsx  impact-view.tsx  kpi-cards.tsx  layout.tsx  market-panel.tsx  multi-timeframe-sentiment.tsx  neural-map.tsx  news-feed.tsx  (+13 more)
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/lib/: api.ts  csv-export.ts  useWebSocket.ts
integration/: package-lock.json  package.json  tsconfig.json
integration/output/: PLOTCODE_Master_Build_Plan.docx
integration/src/: index.ts
integration/src/components/: body.ts  cover.ts  dividers.ts  footer.ts  headings.ts  tables.ts
integration/src/config/: defaults.ts  sample.json  schema.ts
integration/src/sections/: deliverables.ts  overview.ts  phases.ts  techStack.ts  whatWins.ts
integration/src/styles/: borders.ts  colors.ts  fonts.ts
integration/src/utils/: document.ts  export.ts
scripts/: init_db.py  run_local.py  run_once.py  seed_watchlist.py
src/: __init__.py
src/agents/: __init__.py  alert_engine.py  base.py  impact_mapper.py  market_collector.py  news_collector.py  sentiment_analyzer.py
src/ai/: __init__.py  llm_client.py  nim_client.py  openrouter_client.py  prompts.py
src/alerts/: __init__.py  email_sender.py  formatter.py  telegram_bot.py
src/api/: auth.py  binance_client.py  coingecko_client.py  finnhub_client.py  newsapi_client.py  routes.py
src/db/: __init__.py  models.py  mongodb.py  repositories.py
src/scheduler/: __init__.py  jobs.py
src/utils/: __init__.py  deduplication.py  helpers.py  rate_limiter.py
tests/: test_api.py  test_repositories.py
(+4 files in other folders)
